--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -1,14 +1,37 @@
-##Spring Configuration
 server:
   port: 8080
 spring:
   application:
-    name: Authentication
+    name: "Authentication"
   devtools:
     add-properties: false
   h2:
     console:
       enabled: true
-      path: /h2
+      path: "/h2"
   profiles:
-    include:
+    include: null
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,prometheus"
+  endpoint:
+    health:
+      probes:
+        enabled: true
+cors:
+  allowed-origins: "http://localhost:4200,http://localhost:8080"
+
+adapters:
+  postgres:
+    database: "pragma"
+    host: "localhost"
+    port: 5432
+    username: "postgres"
+    password: "qwerty"
+    schema: "schema"
+    pool:
+      initial-size: 12
+      max-size: 15
+      max-idle-time: 10
