--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
       enabled: true
       path: "/h2"
   profiles:
-    include: null
+    active: mysql
 management:
   endpoints:
     web:
@@ -22,12 +22,11 @@ management:
         enabled: true
 cors:
   allowed-origins: "http://localhost:4200,http://localhost:8080"
-
-adapters:
-  r2dbc:
-    host: "localhost"
-    port: 5432
-    database: "pragma"
-    schema: "public"
-    username: "postgres"
-    password: "qwerty"
+# adapters:
+#   r2dbc:
+#     host: "localhost"
+#     port: 5432
+#     database: "pragma"
+#     schema: "public"
+#     username: "postgres"
+#     password: "qwerty"
