validations and logs

--- a/applications/app-service/src/main/resources/application-mysql.yaml
+++ b/applications/app-service/src/main/resources/application-mysql.yaml
@@ -9,4 +9,5 @@ adapters:
     port: 3306
     database: "pragma"
     username: "root"
-    password: "12345678"
+    # password: "12345678" # for local dev
+    password: "xyz" # for docker
