--- a/applications/app-service/src/main/resources/application-mysql.yaml
+++ b/applications/app-service/src/main/resources/application-mysql.yaml
@@ -7,7 +7,7 @@ adapters:
   r2dbc:
     host: "localhost"
     port: 3306
-    database: "pragma"
+    database: "pragma-auth"
     username: "root"
-    # password: "12345678" # for local dev
-    password: "xyz" # for docker
+    password: "12345678" # for local dev
+    # password: "xyz" # for docker
