security and preauthorize

--- a/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
+++ b/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
@@ -6,7 +6,8 @@ dependencies {
     implementation 'org.postgresql:r2dbc-postgresql'
     implementation 'io.asyncer:r2dbc-mysql:1.4.1'
     implementation 'org.reactivecommons.utils:object-mapper-api:0.1.0'
-
+    implementation "org.mapstruct:mapstruct:$mapstructVersion"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
     testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
 }
 
