--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	implementation project(':redis')
     implementation project(':security')
     implementation 'org.reactivecommons.utils:object-mapper:0.1.0'
     implementation project(':r2dbc-postgresql')
