--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,5 @@ include ':use-case-impls'
 project(':use-case-impls').projectDir = file('./infrastructure/use-case-impls')
 include ':security'
 project(':security').projectDir = file('./infrastructure/helpers/security')
+include ':redis'
+project(':redis').projectDir = file('./infrastructure/driven-adapters/redis')
