fix test and dockerfile

--- a/applications/app-service/src/main/resources/application-postgres.yaml
+++ b/applications/app-service/src/main/resources/application-postgres.yaml
@@ -5,5 +5,5 @@ adapters:
     database: "pragma"
     schema: "public"
     username: "postgres"
-    password: "qwerty" # for local dev
-    # password: "store" # for docker
+    #    password: "qwerty" # for local dev
+    password: "store" # for docker
