--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -11,9 +11,10 @@ spring:
       path: "/h2"
   profiles:
     active: "mysql"
-  redis:
-    host: "localhost"
-    port: 6379
+  data:
+    redis:
+      host: "localhost"
+      port: 6379
 management:
   endpoints:
     web:
